--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                         <option value="3">3º RDQA</option>
                     </select>
                 </div>
-                </div>
+<!-- Botão removido daqui -->
+            </div>
 
         <!-- Chart Section -->
         <div class="bg-white p-6 rounded-lg shadow-sm mb-6">
