--- a/index.html
+++ b/index.html
@@ -727,12 +727,12 @@
                 });
                 
                 const chartData = {
-                    labels: ['Alcançada', 'Não Alcançada', 'Outros'],
-                    datasets: [{
-                        data: [statusCounts['Alcançada'], statusCounts['Não Alcançada'], statusCounts['Outro']],
-                        backgroundColor: ['#3B82F6', '#EF4444', '#FBBF24'],
-                        borderColor: '#fff',
-                        borderWidth: 2
+                     labels: ['Alcançada', 'Não Alcançada', 'Outros'],
+    datasets: [{
+        data: [statusCounts['Alcançada'], statusCounts['Não Alcançada'], statusCounts['Outro']],
+        backgroundColor: ['#22C55E', '#EF4444', '#FBBF24'],
+        borderColor: '#fff',
+        borderWidth: 2
                     }]
                 };
 
