--- a/index.html
+++ b/index.html
@@ -938,19 +938,7 @@
                         </div>
                         <div class="mt-8 pt-6 border-t">
                             <div id="qualitative-analysis-container" class="mb-6">
-  <div class="flex items-center justify-between mb-2">
-    <h3 class="text-xl font-bold text-gray-800">Análise Qualitativa com IA ✨</h3>
-    <button id="export-qualitative-pdf" class="hidden bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700 text-sm">Exportar PDF</button>
-  </div>
-  <div id="qualitative-analysis-content" class="ai-content"></div>
-</div>
-<div id="action-plan-container" class="hidden mb-6">
-  <div class="flex items-center justify-between mb-2">
-    <h3 class="text-xl font-bold text-gray-800">Plano de Ação com IA ✨</h3>
-    <button id="export-actionplan-pdf" class="hidden bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700 text-sm">Exportar PDF</button>
-  </div>
-  <div id="action-plan-content" class="ai-content"></div>
-</div>;
+  div id="qualitative-analysis-container;
             modal.classList.remove('hidden');
             document.getElementById('close-modal').addEventListener('click', () => modal.classList.add('hidden'));
             document.getElementById('generate-analysis-btn').addEventListener('click', () => generateQualitativeAnalysis(goal, resultForModal, statusForModal, periodText, selectedYear));
