--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="bg-white shadow-md">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-4">
-                <svg class="w-10 h-10 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+                <svg class="w-10 h-10 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
                 <h1 id="header-title" class="text-2xl font-bold text-gray-800">Painel de Monitoramento RAG V.01</h1>
             </div>
              <div class="flex items-center gap-4">
@@ -74,14 +74,14 @@
         <div class="bg-white p-4 rounded-lg shadow-sm mb-6 flex flex-col space-y-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                  <div class="relative w-full">
-                    <input type="text" id="search-input" placeholder="Buscar por ID ou palavra-chave..." class="w-full pl-10 pr-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <input type="text" id="search-input" placeholder="Buscar por ID ou palavra-chave..." class="w-full pl-10 pr-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
                     <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                         <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
                     </div>
                 </div>
                 <div class="flex items-center gap-2">
                     <label for="year-filter" class="font-medium">Ano (para lista):</label>
-                    <select id="year-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <select id="year-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-green-500">
                         <option value="2024" selected>2024</option>
                         <option value="2023">2023</option>
                         <option value="2022">2022</option>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="flex items-center gap-2">
                     <label for="status-filter" class="font-medium">Status (nos gráficos):</label>
-                    <select id="status-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <select id="status-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-green-500">
                         <option value="todos">Todos</option>
                         <option value="Alcançada">Alcançada</option>
                         <option value="Não Alcançada">Não Alcançada</option>
@@ -99,20 +99,20 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                  <div class="flex items-center gap-2">
                     <label for="diretriz-filter" class="font-medium">Diretriz:</label>
-                    <select id="diretriz-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <select id="diretriz-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-green-500">
                         <option value="todas">Todas as Diretrizes</option>
                     </select>
                 </div>
                 <div class="flex items-center gap-2 lg:col-span-2">
                     <label for="objetivo-filter" class="font-medium">Objetivo:</label>
-                    <select id="objetivo-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <select id="objetivo-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-green-500">
                         <option value="todos">Todos os Objetivos</option>
                     </select>
                 </div>
             </div>
             <div class="flex items-center gap-2">
                 <label for="quadrimestre-filter" class="font-medium">Período:</label>
-                <select id="quadrimestre-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <select id="quadrimestre-filter" class="w-full border rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-green-500">
                     <option value="anual" selected>Resultado Anual</option>
                     <option value="1">1º RDQA</option>
                     <option value="2">2º RDQA</option>
@@ -449,7 +449,7 @@
             }
         }
 
-        function showLoading(container, message) { container.innerHTML = `<div class="flex items-center justify-center p-8"><svg class="animate-spin -ml-1 mr-3 h-8 w-8 text-blue-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg><span class="text-lg text-gray-600">${message}</span></div>`; }
+        function showLoading(container, message) { container.innerHTML = `<div class="flex items-center justify-center p-8"><svg class="animate-spin -ml-1 mr-3 h-8 w-8 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg><span class="text-lg text-gray-600">${message}</span></div>`; }
         function showError(container, error) { console.error("Error AI:", error); container.innerHTML = `<div class="p-4 bg-red-100 text-red-700 rounded"><strong>Erro:</strong><p>${error.message || 'Falha ao contatar a API.'}</p></div>`; }
         
         // --- Chart Logic ---
@@ -496,7 +496,7 @@
                     labels: ['Alcançada', 'Não Alcançada', 'Outros'],
                     datasets: [{
                         data: [statusCounts['Alcançada'], statusCounts['Não Alcançada'], statusCounts['Outro']],
-                        backgroundColor: ['#3B82F6', '#EF4444', '#FBBF24'],
+                        backgroundColor: ['#22C55E', '#EF4444', '#FBBF24'],
                         borderColor: '#fff',
                         borderWidth: 2
                     }]
@@ -811,12 +811,12 @@
                         <p class="text-lg text-gray-700">${goal.title}</p>
                         <div class="flex items-center text-sm text-gray-600 font-medium"><span class="flex items-center">${polarityIcon}<span>${polarityText}</span></span></div>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <div class="bg-blue-50 border border-blue-200 rounded-lg p-4"><h4 class="font-semibold text-blue-800">Diretriz</h4><p class="text-blue-700 text-sm mt-1">${goal.diretriz}</p></div>
-                            <div class="bg-green-50 border border-green-200 rounded-lg p-4"><h4 class="font-semibold text-green-800">Objetivo</h4><p class="text-green-700 text-sm mt-1">${goal.objetivo}</p></div>
+                            <div class="bg-green-50 border border-green-200 rounded-lg p-4"><h4 class="font-semibold text-green-800">Diretriz</h4><p class="text-green-700 text-sm mt-1">${goal.diretriz}</p></div>
+                            <div class="bg-blue-50 border border-blue-200 rounded-lg p-4"><h4 class="font-semibold text-blue-800">Objetivo</h4><p class="text-blue-700 text-sm mt-1">${goal.objetivo}</p></div>
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-center">
                             <div class="bg-gray-100 p-4 rounded-lg"><p class="text-sm text-gray-500">Meta Esperada</p><p class="text-3xl font-bold text-gray-800">${yearData.esperado}</p></div>
-                            <div class="bg-gray-100 p-4 rounded-lg"><p class="text-sm text-gray-500">Resultado Alcançado</p><p class="text-3xl font-bold text-blue-600">${resultForModal || 'N/A'}</p></div>
+                            <div class="bg-gray-100 p-4 rounded-lg"><p class="text-sm text-gray-500">Resultado Alcançado</p><p class="text-3xl font-bold text-green-600">${resultForModal || 'N/A'}</p></div>
                             <div class="bg-gray-100 p-4 rounded-lg"><p class="text-sm text-gray-500">Variação</p><p class="text-3xl font-bold ${variacaoColor}">${variacaoText}</p></div>
                         </div>
                         <div class="mt-8 pt-6 border-t">
@@ -825,7 +825,7 @@
                                 <div><h3 class="text-xl font-bold text-gray-800 mb-4">Plano de Ação com IA ✨</h3><div id="action-plan-content" class="ai-content text-gray-700 leading-relaxed min-h-[10rem] p-4 bg-gray-50 rounded-lg"><p class="text-gray-500">Gere uma análise primeiro para poder elaborar um plano de ação.</p></div></div>
                             </div>
                             <div class="mt-6 flex flex-col sm:flex-row gap-4">
-                                <button id="generate-analysis-btn" class="w-full sm:w-auto flex-1 bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700">Gerar Análise</button>
+                                <button id="generate-analysis-btn" class="w-full sm:w-auto flex-1 bg-green-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700">Gerar Análise</button>
                                 <button id="generate-action-plan-btn" class="w-full sm:w-auto flex-1 hidden bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-indigo-700">Elaborar Plano de Ação</button>
                                 <button id="export-analysis-btn" class="w-full sm:w-auto hidden bg-gray-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-gray-600">Exportar Análises e Planos</button>
                             </div>
