--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <script>
     // --- FULL DATASET ---
     // Data processed and consolidated from the provided CSV files.
-   const dataSets = { // RawDataSets (type commented out)
+   const dataSets = { 
      "2022": {
        "Diretriz 1: Fortalecimento da Atenção Primária à Saúde e aprimoramento das Redes de Atenção à Saúde ampliando o acesso com qualidade e eficiência.": {
                 "Objetivo 1.1: Aprimorar e fortalecer as ações e políticas estratégicas de saúde na atenção primária concomitante as redes de atenção em saúde, com o escopo de focar na promoção e prevenção da saúde.": [
