--- a/index.html
+++ b/index.html
@@ -803,5 +803,11 @@
         filterAndRender();
     });
     </script>
+<!-- Footer -->
+<footer class="bg-white border-t py-4 mt-8">
+  <div class="container mx-auto px-6 text-center text-gray-500 text-sm">
+    Todos os direitos reservados © 2025 Frank Sinatra da Silva Muniz
+  </div>
+</footer>
 </body>
 </html>
