--- a/index.html
+++ b/index.html
@@ -155,12 +155,26 @@
       "2022": {
         "DIRETRIZ 1 - AMPLIAR O ACESSO QUALIFICADO DA POPULAÇÃO AS REDES DE ATENÇÃO À SAÚDE DE FORMA HUMANIZADA E INTEGRAL": {
           "OBJETIVO 1 - FORTALECER A ATENÇÃO PRIMÁRIA COMO ORDENADORA DO CUIDADO E COORDENADORA DA REDE": [
-            {"id": 1, "title": "Aumentar a cobertura populacional da Atenção Básica de 67,09% para 80,00% até 2025.", "polaridade": "MAIOR", "esperado": "70,00%", "resultado": "67,09%", "quadrimestres": {"1": "67,10%", "2": "81,47%", "3": "81,47%"}},
-            {"id": 2, "title": "Realizar ações assistenciais básicas complementares para a população indígena 3 vezes ao ano.", "polaridade": "MAIOR", "esperado": "3", "resultado": "4", "quadrimestres": {"1": "1", "2": "2", "3": "4"}},
-            {"id": 3, "title": "Implantar assistência oftalmológica como ação integrante do Programa Saúde na Escola de 0% para 100% das escolas pactuadas em 2025.", "polaridade": "MAIOR", "esperado": "25,00%", "resultado": "41,30%", "quadrimestres": {"1": "41,30%", "2": "41,30%", "3": "41,30%"}},
-            {"id": 4, "title": "Implantar a Saúde Bucal em 100% das equipes de Saúde da Família.", "polaridade": "MAIOR", "esperado": "84,00%", "resultado": "84,00%", "quadrimestres": {"1": "84,00%", "2": "84,00%", "3": "84,00%"}}
-          ],
-          "OBJETIVO 2 - ORGANIZAR A REDE DE ATENÇÃO À SAÚDE MATERNO INFANTIL": [
+             {"id":1,"title":"Aumentar a Cobertura de Agentes Comunitários de Saúde de 67,09% em 2020 para 80,00% em 2025.","esperado":"69%","resultado":"81,47%","polaridade":"maior","quadrimestres":{"1":"67,10%","2":"81,47%","3":"81,47%"}},
+    {"id":2,"title":"Realizar ações assistenciais básicas complementares para a população indígena 03 vezes ao ano.","esperado":"3","resultado":"4","polaridade":"maior","quadrimestres":{"1":"1","2":"2","3":"4"}},
+    {"id":3,"title":"Implantar assistência oftalmológica como ação integrante do Programa Saúde na Escola de 0 % para 100 % das escolas pactuadas em 2025.","esperado":"25%","resultado":"41,3%","polaridade":"maior","quadrimestres":{"1":"41,3%","2":"41,3%","3":"41,3%"}},
+    {"id":4,"title":"Aumentar a cobertura de acompanhamento das condicionalidades de saúde do Programa Bolsa Família (BPF) de 60,94 % em 2019 para 80% em 2025.","esperado":"65%","resultado":"44,5%","polaridade":"maior","quadrimestres":{"1":"44,5%","2":"44,5%","3":"44,5%"}},
+    {"id":5,"title":"Aumentar a cobertura populacional estimada pela estratégia Saúde da Família de 62,95 em 2020 para 80,00 em 2025.","esperado":"68%","resultado":"69,3%","polaridade":"maior","quadrimestres":{"1":"69,3%","2":"69,3%","3":"69,3%"}},
+    {"id":6,"title":"Ampliar a cobertura populacional estimada pelas equipes de Atenção Básica de 78,93% em 2020 para 92,00% em 2025.","esperado":"81%","resultado":"100%","polaridade":"maior","quadrimestres":{"1":"100%","2":"100%","3":"100%"}},
+    {"id":7,"title":"Ampliar a assistência ofertada por equipe multiprofissional e interdisciplinar na APS de 59,00 em 2019 para 64,00 em 2025.","esperado":"10,5","resultado":"16,1","polaridade":"maior","quadrimestres":{"1":"16,1","2":"16,1","3":"16,1"}},
+    {"id":8,"title":"Ampliar oferta de exames laboratoriais para as unidades Básicas de saúde de de 30% em 2020 para 50% em 2025.","esperado":"35%","resultado":"67,4%","polaridade":"maior","quadrimestres":{"1":"67,4%","2":"67,4%","3":"67,4%"}},
+    {"id":9,"title":"Reduzir em 10% o quantitativo de crianças integrantes no programa APLV até 2025.","esperado":"2,5%","resultado":"4,19%","polaridade":"menor","quadrimestres":{"1":"4,19%","2":"4,19%","3":"4,19%"}},
+    {"id":10,"title":"Reduzir a tendência da gravidez de adolescentes de 10 a 19 anos de 15,30% em 2020 para 14,50% em 2025.","esperado":"14,9%","resultado":"15,2%","polaridade":"menor","quadrimestres":{"1":"15,2%","2":"15,2%","3":"15,2%"}},
+    {"id":11,"title":"Aumentar a cobertura da vacina Poliomielite inativada e da Pentavalente de 36% em 2020 para 95% em 2025.","esperado":"95%","resultado":"51%","polaridade":"maior","quadrimestres":{"1":"51%","2":"51%","3":"51%"}},
+    {"id":12,"title":"Ampliar o percentual de diabéticos com solicitação hemoglobina glicada de 11% em 2020 para 90% em 2025.","esperado":"40%","resultado":"33%","polaridade":"maior","quadrimestres":{"1":"33%","2":"33%","3":"33%"}},
+    {"id":13,"title":"Aumentar a proporção de gestantes com pelo menos 06 (seis) consultas pré natal, sendo a primeira até a 20ª semana de gestação de 38% em 2020 para 80% em 2025.","esperado":"60%","resultado":"43%","polaridade":"maior","quadrimestres":{"1":"43%","2":"43%","3":"43%"}},
+    {"id":14,"title":"Aumentar a proporção de gestantes com realização de exames para siflis e HIV de 67% em 2020 para 95% em 2025.","esperado":"75%","resultado":"77%","polaridade":"maior","quadrimestres":{"1":"77%","2":"77%","3":"77%"}},
+    {"id":15,"title":"Aumentar o percentual de pessoas hipertensas com pressão arterial aferida em cada semestre de 14% em 2020 para 90% em 2025.","esperado":"50%","resultado":"28%","polaridade":"maior","quadrimestres":{"1":"28%","2":"28%","3":"28%"}},
+    {"id":16,"title":"Aumentar a proporção de gestantes com atendimento odontológico de 22% em 2020 para 90% em 2025.","esperado":"60%","resultado":"61%","polaridade":"maior","quadrimestres":{"1":"61%","2":"61%","3":"61%"}},
+    {"id":17,"title":"Ampliar o acesso a atenção odontológica na atenção básica de 52,17 em 2020 para 80,00% em 2025.","esperado":"65%","resultado":"57,9%","polaridade":"maior","quadrimestres":{"1":"57,9%","2":"57,9%","3":"57,9%"}},
+    {"id":18,"title":"Implantar nas Unidade Básicas de Saúde o Prontuário Eletrônico de 61% em 2020 para 100% em 2025.","esperado":"80,5%","resultado":"75%","polaridade":"maior","quadrimestres":{"1":"75%","2":"75%","3":"75%"}}
+];
+               "OBJETIVO 2 - ORGANIZAR A REDE DE ATENÇÃO À SAÚDE MATERNO INFANTIL": [
             {"id": 5, "title": "Reduzir a taxa de mortalidade infantil para 8,0 por mil nascidos vivos.", "polaridade": "MENOR", "esperado": "10", "resultado": "13,8", "quadrimestres": {"1": "13,8", "2": "13,8", "3": "13,8"}}
           ]
         },
