--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 
         // --- AI & API Logic ---
         async function callGeminiAPI(prompt) {
-            const apiKey = "";
+            const apiKey = "AIzaSyDEAKHN2dh4z9IsZcqdIBtwGkitz7SmtX4";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
             
             try {
