--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="flex flex-col items-end space-y-0">
             <span class="text-sm text-gray-500">Instrumento de Gestão do SUS</span>
-            <span class="text-base text-blue-700 font-semibold leading-tight">Parauapebas</span>
+            <span class="text-base text-blue-700 font-semibold leading-tight">Parauapebas-PA</span>
         </div>
     </div>
 </header>
